finalized readme, fixed tag spacing

--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,3 @@
-# responsive-table-generator
-
-This is a simple python script to generate responsive HTML tables.
-
-# Usage
-In your css file, insert the following media query along with any additional styles to the table.
-```css
 @media screen and (max-width: 906px){
   .responsive-table > thead > tr > th,
   .responsive-table > tbody > tr > th,
@@ -16,7 +9,7 @@ In your css file, insert the following media query along with any additional sty
     vertical-align: top;
     border-top: 0;
   }
-  
+
   .responsive-table thead {
     display: none;
   }
@@ -44,9 +37,3 @@ In your css file, insert the following media query along with any additional sty
     margin-right: 0.5em;
   }
 }
-```
-
-To generate a table, simply navigate to the script and run the following on the command line:
-``` shell
-  python gen.py
-```
